feat: new module, and render fix